re PR target/50116 (internal compiler error: in decode_addr_const, at varasm.c:2632)

2011-08-29  Richard Guenther  <rguenther@suse.de>

        PR middle-end/50116
	* varasm.c (decode_addr_const): Handle MEM_REF[&X, OFF].

From-SVN: r178155